# five-days-of-ai

./: .gcloudignore  .gitignore  Dockerfile  Dockerfile.bak  EVALUATION_RESULTS.csv  EVALUATION_RESULTS.md  README.md  deploy_to_gcp.sh  push_to_github.sh  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/agents/: execution.py  planning.py  router.py  triage.py
app/models/: db.py  domain.py
app/services/: auth_service.py  db_service.py  dlp_service.py  workspace_service.py
app/telemetry/: __init__.py  logging.py  tracing.py
app/tools/: gtd_tools.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_agents.py  test_capacity.py  test_eval_harness.py  test_schemas.py
