[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtd-ef-agent"
version = "1.0.0"
description = "GTD and Workload Focus Containerized Multi-Agent System on Cloud Run"

authors = [{ name = "Senior Principal Software Engineer", email = "sjaconette@google.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.6.0",
    "google-genai>=0.1.1",
    "sqlalchemy>=2.0.25",
    "structlog>=24.1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

